Fix horizontal scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ article {
 
 .program__block img {
   margin: 0;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .program__tagline {
